--- a/docs/changes/1376.maintenance.md
+++ b/docs/changes/1376.maintenance.md
@@ -1,1 +1,1 @@
-Maintenance PR to remove not needed flags and to only use metric files.
+Maintenance in production configuration removing not needed flags and only use metric files.
