--- a/docs/changes/1404.bugfix.md
+++ b/docs/changes/1404.bugfix.md
@@ -1,1 +1,1 @@
-Fix yamllint options in pre-commit (was essentially switched off). Fix syntax in many yaml files.
+Fix yamllint options in pre-commit (was essentially switched off). Fix syntax in many YAML files.
