--- a/docs/changes/1464.feature.md
+++ b/docs/changes/1464.feature.md
@@ -1,1 +1,1 @@
-Use yaml files to pass filepaths for simtel event data files and telescope IDs in corsika limits derivation tool.
+Use YAML files to pass filepaths for simtel event data files and telescope IDs in corsika limits derivation tool.
