apparently it is Unicode, not unicode

--- a/docs/changes/1463.feature.md
+++ b/docs/changes/1463.feature.md
@@ -1,1 +1,1 @@
-Add tests to ensure that model table files uploaded to DB follow unicode.
+Add tests to ensure that model table files uploaded to DB follow Unicode.
