--- a/docs/changes/1502.maintenance.md
+++ b/docs/changes/1502.maintenance.md
@@ -1,1 +1,1 @@
-Renaming of production statistics derivation methods.
+Renaming of event scaling methods to production statistics derivation methods.
