--- a/docs/changes/1588.bugfix.md
+++ b/docs/changes/1588.bugfix.md
@@ -1,1 +1,1 @@
-Fix suffix for sim_telarray output files: no correctly `simtel.zstd` (was `.zstd` only)
+Fix suffix for sim_telarray output files: no correctly `simtel.zst` (was `.zst` only)
