--- a/docs/changes/1611.doc.md
+++ b/docs/changes/1611.doc.md
@@ -1,1 +1,1 @@
-Reorganisation and improvement of the documentation in the github pages.
+Reorganisation and improvement of the documentation in the GitHub pages.
