--- a/docs/changes/1635.maintenance.md
+++ b/docs/changes/1635.maintenance.md
@@ -1,1 +1,1 @@
-Introduce consistent lower-cases for keys in plotting configuration schema.
+Add default plotting configuration for tabular data. Introduce consistent lower-cases for keys in plotting configuration schema.
