--- a/docs/changes/1637.feature.md
+++ b/docs/changes/1637.feature.md
@@ -1,1 +1,1 @@
-Add common array elements id. Add list with triggered common telescope IDs to reduced event data tables.
+Add common array elements ID. Add list with triggered common telescope IDs to reduced event data tables.
