--- a/docs/changes/1632.feature.md
+++ b/docs/changes/1632.feature.md
@@ -1,1 +1,1 @@
-Add angular distance vs energy histogram for derivation of corsika limits.
+Add additional plots for the derivation of CORSIKA limits.
